--- a/YETI/YETI.iOS/YETI.iOS.csproj
+++ b/YETI/YETI.iOS/YETI.iOS.csproj
@@ -192,6 +192,12 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.0.4</Version>
     </PackageReference>
+    <PackageReference Include="Json.Net">
+      <Version>1.0.18</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.6.292</Version>
     </PackageReference>
