--- a/YETI/YETI/YETI.csproj
+++ b/YETI/YETI/YETI.csproj
@@ -6,8 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="7.0.4" />
+    <PackageReference Include="Json.Net" Version="1.0.18" />
     <PackageReference Include="LiveXAML" Version="2.1.73" />
-    <PackageReference Include="Nancy" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.2.0" />
     <PackageReference Include="sqlite-net-pcl" Version="1.6.292" />
     <PackageReference Include="Xamarin.Forms" Version="3.6.0.344457" />
