--- a/YETI/YETI.Android/YETI.Android.csproj
+++ b/YETI/YETI.Android/YETI.Android.csproj
@@ -146,10 +146,10 @@
     <AndroidResource Include="Resources\drawable\refrescar.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\flecha.png" />
+    <AndroidResource Include="Resources\drawable\idioma.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\idioma.png" />
+    <AndroidResource Include="Resources\drawable\flechas.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
