--- a/YETI/YETI.Android/YETI.Android.csproj
+++ b/YETI/YETI.Android/YETI.Android.csproj
@@ -154,5 +154,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\raw\audio1.mp3" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\play.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pausa.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\stop.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
