--- a/YETI/YETI/YETI.csproj
+++ b/YETI/YETI/YETI.csproj
@@ -50,6 +50,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="ASPNetSpell">
+      <HintPath>..\..\..\Users\USER\Downloads\aspnetspell\ASPNetSpell\ASPNetSpell.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Android">
       <HintPath>..\..\..\Program Files (x86)\Microsoft Visual Studio\2019\Professional\Common7\IDE\ReferenceAssemblies\Microsoft\Framework\MonoAndroid\v9.0\Mono.Android.dll</HintPath>
     </Reference>
